Se agrego footer

--- a/nueva_opcion.html
+++ b/nueva_opcion.html
@@ -1,5 +1,9 @@
 <html>
     <body>
-        
+        <header>
+            <footer>
+                
+            </footer>
+        </header>
     </body>
 </html>
